--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
-"scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "server": "json-server --watch reactfilmsproject/src/data/questions.json --port 5001"
-},
-
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "server": "json-server --watch reactfilmsproject/src/data/questions.json --port 5001",
+    "deploy": "npm run build && gh-pages -d build",
+    "predeploy": "npm run build"
+  },
+  "homepage": "https://your-username.github.io/reactfilmsproject",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -50,6 +52,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "json-server": "^1.0.0-beta.3"
   }
 }
