--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server --watch reactfilmsproject/src/data/questions.json --port 5001",
-    "deploy": "npm run build && gh-pages -d build",
-    "predeploy": "npm run build"
+"predeploy": "npm run build",
+"deploy": "gh-pages -d build",
+    "homepage": "https://Ani20202020.github.io/filmsproject",
+
   },
   "homepage": "https://your-username.github.io/reactfilmsproject",
   "eslintConfig": {
