--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "reactfilmsproject",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Ani20202020.github.io/filmsproject",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -25,11 +26,9 @@
     "eject": "react-scripts eject",
     "server": "json-server --watch reactfilmsproject/src/data/questions.json --port 5001",
 "predeploy": "npm run build",
-"deploy": "gh-pages -d build",
-    "homepage": "https://Ani20202020.github.io/filmsproject",
+"deploy": "gh-pages -d build"
 
   },
-  "homepage": "https://your-username.github.io/reactfilmsproject",
   "eslintConfig": {
     "extends": [
       "react-app",
