--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch reactfilmsproject/src/data/questions.json --port 5001",
+    "server": "json-server --watch src/data/questions.json --port 5001",
 "predeploy": "npm run build",
 "deploy": "gh-pages -d build"
 
